--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -28,8 +28,8 @@ jobs:
         python -m flake8
         # перейти в папку, содержащую manage.py — 
         #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        # cd api_yamdb/
+        cd YAMDB_FINAL/
         # запустить написанные разработчиком тесты
-        # python manage.py test
+        python manage.py test
 
 
