--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -59,4 +59,13 @@ jobs:
           sudo docker pull opgang/yamdb:v1
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 8000:8000 opgang/yamdb:v1
-
+  send_message:
+  runs-on: ubuntu-latest
+  needs: deploy
+  steps:
+  - name: send message
+    uses: appleboy/telegram-action@master
+    with:
+      to: ${{ secrets.TELEGRAM_TO }}
+      token: ${{ secrets.TELEGRAM_TOKEN }}
+      message: ${{ github.workflow }} успешно выполнен!
