--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -46,7 +46,7 @@ jobs:
             file: api_yamdb/Dockerfile 
   deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     needs: build_and_push_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
